--- a/web-ui/src/styles/code-editor-4.css
+++ b/web-ui/src/styles/code-editor-4.css
@@ -1,11 +1,12 @@
 
 .code-block-body {
     display: flex;
-    overflow-x: auto
+    overflow-x: hidden
 }
 
 .code-block-body>div code {
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-word;
     display: block;
     padding: .5em 1em
 }
@@ -32,13 +33,13 @@
     padding: 0 .75em 0 .5em
 }
 
-.code-block-wrap .code-block-body {
-    overflow-x: visible
+.code-block-nowrap .code-block-body {
+    overflow-x: auto
 }
 
-.code-block-wrap .code-block-body code,.code-block-wrap .code-block-body pre {
-    white-space: pre-wrap!important;
-    word-break: break-all
+.code-block-nowrap .code-block-body code,.code-block-nowrap .code-block-body pre {
+    white-space: pre!important;
+    word-break: normal
 }
 
 .code-copy-btn {
